@@ -1,5 +1,10 @@
 2008-03-30  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/eap-method-ttls.c
+		- (eap_method_ttls_new): fill anonymous username and CA cert
+
+2008-03-30  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/ws-leap.c
 		- (ws_leap_new): fill leap password and username
 
